--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
-meta_product_name: "Product Name"
-meta_title: "Product name - Product tagline"
-meta_description: "Relevant description"
-meta_image: "cover.png"
-twitter_account: "@product_twitter_account"   # required for Twitter Cards
+meta_product_name: "Mind the Map"
+meta_title: "Mind the Map - The Map in your Head"
+meta_description: "Can you locate places on a unlabeled city map?"
+meta_image: img_path "cover.png"                       # should exist in `app/assets/images/`
+# twitter_account: "@product_twitter_account"   # required for Twitter Cards
