--- a/app/assets/javascripts/manifest.json
+++ b/app/assets/javascripts/manifest.json
@@ -1,6 +1,6 @@
 {
   "background_color": "white",
-  "name": "Mind the Gap",
+  "name": "Mind the Map",
   "description": "Can you locate places on an unlabeled map?",
   "start_url": "/",
   "display": "fullscreen",
